Update sidebar brand text to 'FEE MANAGEMENT'

--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
     </div>
 
     <div class="sidebar" id="sidebar" style="display: none;">
-        <div class="brand"><h1>TIKARKHANJI<br>JNYCTSD</h1><p>MANAGEMENT PRO</p></div>
+        <div class="brand"><h1>TIKARKHANJI<br>JNYCTSD</h1><p>FEE MANAGEMENT</p></div>
         <div class="nav-item active" id="btn-dash" onclick="navigate('dashboard')"><i class="fas fa-th-large"></i><span>Home</span></div>
         <div class="nav-item" id="btn-track" onclick="navigate('monthTracker')"><i class="fas fa-calendar-check"></i><span>Fees</span></div>
         <div class="nav-item" id="btn-adm" onclick="navigate('admission')"><i class="fas fa-user-plus"></i><span>Add</span></div>
